--- a/requirements.txt
+++ b/requirements.txt
@@ -19,4 +19,7 @@ structlog==23.2.0
 bleach==6.1.0
 
 # HTTP client for health checks
-httpx==0.25.2 
+httpx==0.25.2
+
+# Security auditing
+safety==3.0.1 
