--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,31 @@
 # Core dependencies
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-aiosqlite==0.19.0
-click==8.1.7
+fastapi
+uvicorn[standard]
+pydantic
+aiosqlite
+click
 
 # MCP SDK for refresh functionality
-mcp>=1.0.0
+mcp
 
 # Synvya SDK for Nostr functionality
-synvya-sdk>=0.2.4
+synvya-sdk
 
 # Security and rate limiting
-slowapi==0.1.9
-python-multipart==0.0.6
+slowapi
+python-multipart
 
 # Environment and configuration management
-python-dotenv==1.0.0
+python-dotenv
 
 # Monitoring and logging
-structlog==23.2.0
+structlog
 
 # Input validation and sanitization
-bleach==6.1.0
+bleach
 
 # HTTP client for health checks
-httpx==0.25.2
+httpx
 
 # Security auditing
-safety==3.0.1 
+safety 
