--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,6 @@ SECURITY_IMPLEMENTATION.md
 AWS_DEPLOYMENT.md
 OPENAI_INTEGRATION.md 
 TESTING_GUIDE.md
+LOCAL_DEV_GUIDE.md
+run_local.py
+test_local.py
