--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,8 +28,8 @@ pytest = "^7.4.3"
 pytest-asyncio = "^0.21.1"
 httpx = "^0.25.0"  # For TestClient
 
-[tool.poetry.scripts]
-nostr-profile-mcp = "nostr_market_mcp.__main__:main"
+# [tool.poetry.scripts]
+# CLI removed - use run_mcp_server.py and run_api_server.py instead
 
 [tool.black]
 line-length = 88
