--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -35,39 +35,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install pytest pytest-asyncio pytest-mock
     
     - name: Set environment variables
       run: |
         echo "API_KEY=test_api_key_ci" >> $GITHUB_ENV
         echo "ENVIRONMENT=test" >> $GITHUB_ENV
-    
-    - name: Start API server
+
+    - name: Run all tests (including API tests with automatic server management)
       run: |
-        python run_local.py &
-        echo $! > server.pid
-        # Wait for server to start
-        sleep 10
-    
-    - name: Wait for server to be ready
-      run: |
-        # Wait up to 30 seconds for server to be ready
-        for i in {1..30}; do
-          if curl -f http://127.0.0.1:8080/health; then
-            echo "Server is ready"
-            break
-          fi
-          echo "Waiting for server... attempt $i"
-          sleep 1
-        done
-    
-    - name: Run API tests
-      run: |
-        python run_tests.py
-    
-    - name: Stop server
-      if: always()
-      run: |
-        if [ -f server.pid ]; then
-          kill $(cat server.pid) || true
-        fi
-        pkill -f "python run_local.py" || true 
+        python tests/run_tests.py 
