--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,13 @@ services:
       - "8080:8080"
     environment:
       # Security settings - CHANGE THESE IN PRODUCTION
-      - API_KEY=test_api_key_change_this_in_production
-      - BEARER_TOKEN=test_bearer_token_change_this_in_production
+      - API_KEY=${API_KEY}
+      - BEARER_TOKEN=${BEARER_TOKEN}
       - ALLOWED_ORIGINS=https://platform.openai.com,http://localhost:3000
       - ENVIRONMENT=development
+      
+      # Nostr Configuration - ADD YOUR NOSTR PRIVATE KEY HERE
+      - NOSTR_KEY=${NOSTR_KEY}
       
       # Rate limiting
       - RATE_LIMIT_REQUESTS=100
