Updates to API endpoints

--- a/config.env.example
+++ b/config.env.example
@@ -1,6 +1,7 @@
 # Security Configuration
 API_KEY=your_secret_api_key_here_change_this_immediately
 BEARER_TOKEN=your_bearer_token_here_change_this_immediately
+NOSTR_KEY=your_nsec_secret_nostr_key_here-will_be_added_if_you_dont_have_one
 ALLOWED_ORIGINS=https://yourdomain.com,https://platform.openai.com
 ENVIRONMENT=production
 
@@ -15,7 +16,7 @@ DATABASE_PATH=/app/data/nostr_profiles.db
 NOSTR_RELAYS=wss://relay.damus.io,wss://nos.lol,wss://relay.snort.social,wss://nostr.wine,wss://relay.nostr.band
 
 # Monitoring
-LOG_LEVEL=INFO
+LOG_LEVEL=info
 
 # Server Configuration
 HOST=0.0.0.0
