--- a/infra/sam/package.json
+++ b/infra/sam/package.json
@@ -2,6 +2,7 @@
   "name": "sam",
   "version": "1.0.0",
   "main": "stream-proxy.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
