Reroute health check to api.proxy.com

--- a/.github/workflows/deploy-proxy.yml
+++ b/.github/workflows/deploy-proxy.yml
@@ -63,12 +63,7 @@ jobs:
 
       - name: Verify Proxy Health
         run: |
-          RESPONSE=$(curl --fail -s https://proxy.synvya.com/health)
-          echo "$RESPONSE"
-          if echo "$RESPONSE" | grep -q '"errorType"'; then
-            echo "ERROR DETECTED in Lambda health response"
-            exit 1
-          fi
+          curl --fail --silent https://proxy.synvya.com/health
 
       - name: Notify
         run: echo "Deployment of Streaming Proxy completed."
