--- a/infra/proxy/Dockerfile
+++ b/infra/proxy/Dockerfile
@@ -1,6 +1,7 @@
 FROM public.ecr.aws/docker/library/node:20-alpine
 WORKDIR /app
 COPY stream-proxy.js ./stream-proxy.js
+RUN apk add --no-cache curl
 RUN npm init -y && npm i node-fetch@3
 ENV PORT=8080
 EXPOSE 8080
