--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -2,8 +2,10 @@ name: Deploy API Server to AWS ECS
 
 on:
   push:
+    branches: [ main ]
     tags:
       - 'v*'
+  workflow_dispatch:
 
 env:
   IMAGE_TAG: ${{ github.ref_name }}
