Fix API test workflow to only run API tests
- API workflow was incorrectly running MCP tests which require synvya_sdk
- Changed to run only API integration tests as intended
- Resolves CI failures in API-only workflow

--- a/.github/workflows/test-api.yml
+++ b/.github/workflows/test-api.yml
@@ -43,6 +43,6 @@ jobs:
         echo "ENVIRONMENT=test" >> $GITHUB_ENV
         echo "PYTHONPATH=${{ github.workspace }}" >> $GITHUB_ENV
 
-    - name: Run all tests (including API tests with automatic server management)
+    - name: Run API integration tests only
       run: |
-        python tests/run_tests.py 
+        python -m pytest tests/test_api_integration.py -v 
